samples/_failures_safe/1761096305_8247f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87bccb25.c: In function ‘main’:
./samples/SAFE/__tmp_87bccb25.c:132:5: error: expected declaration or statement at end of input
  132 |     }
      |     ^
